crates/dreamd-cli/tests/snapshots/cli_help__doctor_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "subcommand_help(\"doctor\")"
---
Run health checks and print status (dream-cycle mode, etc.)

Usage: doctor [OPTIONS]

Options:
      --repair
          Rebuild Tantivy from JSONL; unlink orphaned UDS. Wipes the whole derived index cache dir, including any .tantivy-*.lock inside it, and never targets lock files on their own. Does not modify AGENT_LEARNINGS.jsonl

      --cluster-health
          Print skill_action prefix counts vs semantic/recurrence_counts.json; flag drift

      --provenance
          Recompute the provenance Merkle root and list orphan edges, missing lesson and recurrence edges, and corrupt ledger lines. Reads the ledger. Does not rewrite it

  -h, --help
          Print help
