crates/dreamd-cli/tests/snapshots/cli_help__dream_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "subcommand_help(\"dream\")"
---
Run a dream cycle: write LESSONS.md and prune decayed episodic events. Uses a configured LLM, or the deterministic exemplar when there is no key

Usage: dream [OPTIONS]

Options:
      --dry
          Dry run: print the LESSONS.md this cycle would write, without writing anything. Skips the daemon proxy; --no-commit is ignored

      --no-commit
          Skip the git commit and the daemon. The cycle runs in this process. Do not use it while dreamd watch is serving this project

      --no-llm
          Force deterministic mode even when an API key is present

      --share-personal
          Include .agent/personal/ in the dream-cycle composition prompt for this call. Off by default: the personal layer never reaches a model unless this flag is passed. Capped at 16 KiB and ignored under --no-llm

  -h, --help
          Print help
