crates/dreamd-cli/tests/snapshots/cli_help__init_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "subcommand_help(\"init\")"
---
Scaffold a new per-project .agent/ store and register it. An existing .agent/ is left unchanged and is not registered.

Requires a project-root sentinel in cwd or an ancestor.

Usage: init [OPTIONS]

Options:
      --quiet
          Suppress non-essential output (state.json, .gitignore, registry, disclosure)

      --uninstall-project
          Remove this project's entry from ~/.agent/registry.toml and exit. Does not delete the project's .agent/ store

  -h, --help
          Print help (see a summary with '-h')
