crates/dreamd-cli/tests/snapshots/cli_help__memory_bisect_good_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "nested2_subcommand_help(\"memory\", \"bisect\", \"good\")"
---
Mark the checked-out snapshot good and check out the next midpoint

Usage: good

Options:
  -h, --help
          Print help
