crates/dreamd-cli/tests/snapshots/cli_help__memory_bisect_help.snap
---
source: crates/dreamd-cli/tests/cli_help.rs
expression: "nested_subcommand_help(\"memory\", \"bisect\")"
---
Binary-search the snap-* timeline for the first bad snapshot (BZR-153).

Searches refs by the timestamp on their second line; there is no parent pointer. Each step checks out a snapshot, so it refuses while `dreamd watch` is running. Prints `<name> <id>`.

Usage: bisect <COMMAND>

Commands:
  start  Start a bisect between a good and a bad ref, and check out the midpoint
  good   Mark the checked-out snapshot good and check out the next midpoint
  bad    Mark the checked-out snapshot bad and check out the next midpoint
  run    Run SCRIPT once with `sh -c` and mark good on exit 0, bad otherwise
  help   Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')
